overlapping layers fixed +  showing TOC on first heading

--- a/_sass/layout/_sidepanel.scss
+++ b/_sass/layout/_sidepanel.scss
@@ -1,4 +1,5 @@
 #sidepanel {
+    z-index: 101;
     position: fixed;
     opacity: 0;
     left: 50%;
